IN DEVELOPMENT ======= 1.2.4-5

- added: controller.cors(allow, method, header, credentials) - return {Boolean}
- added: controller.header(name, value) - set response header
- added: @header(name, value) - set response header
- added: controller.currentImage(), .currentCSS(), .currentJS(), .currentUpload(), .currentVideo()
- added: @currentImage(), @currentCSS(), @currentJS(), @currentUpload(), @currentVideo()
- added: routeUpload(), @routeUpload()
- added: config['static-url-upload']
- added: auto-removing comments from "views"
- added: controller.empty(); - response empty body
- added: new event framework.on('clear', name)

- updated: controller.proxy() - added timeout

- removed: routeDocument(), @routeDocument()
- removed: config['static-url-document']
- removed: auto clear database object

- fixed: CSS auto vendor prefixes (fixed IE opacity)
- fixed: utils.request() - encoding

- renamed: framework.onLoaded to framework.onLoad;
- renamed: module.onLoaded to module.onLoad;
- renamed: controller.onLoaded to controller.onLoad;

- NEW EXAMPLE: https://github.com/petersirka/partial.js/tree/master/examples/cors
- NEW EXAMPLE: https://github.com/petersirka/partial.js/tree/master/examples/custom-headers
- NEW EXAMPLE: https://github.com/petersirka/partial.js/tree/master/examples/views-route-file

======= 1.2.4-4

- added: partial.js/utils is a global object ... applies everywhere: utils.[method]
- added: partial.js/builders is a global object ... applies everywhere: builders.[method]
- added: auto verifying directories
- added: framework.onCompileCSS(filename, output) :: must return {String} (if is declared then auto-vendor-prefixes and internal LESS CSS are disabled)
- added: framework.onCompileJS(filename, output) :: must return {String} (if is declared then internal JavaScript minificator is disabled)
- added: utils.copy(target, source, rewrite);
- added: Array.where(fn);
- added: Array.randomize();
- added: partial.js/mail attachments