@@ -1,3 +1,7 @@
+exports.install = function(framework) {
+	framework.route('/share/', view_share);
+};
+
 exports.functions = {
 	message: function () {
 		return 'message';
@@ -10,3 +14,8 @@ exports.models = {
 		age: 28
 	}
 };
+
+function view_share() {
+	this.layout('');
+	this.view('index');
+}
