@@ -1,5 +1,8 @@
 IN DEVELOPMENT ======= 1.2.4-5
 
+IMPORTANT:
+- updated: controller.view() - view('my-view-name') -> /controller-name/my-view-name.html (except default.js controller)
+
 - added: controller.cors(allow, method, header, credentials) - return {Boolean}
 - added: controller.header(name, value) - set response header
 - added: @header(name, value) - set response header
@@ -10,6 +13,7 @@ IN DEVELOPMENT ======= 1.2.4-5
 - added: auto-removing comments from "views"
 - added: controller.empty(); - response empty body
 - added: new event framework.on('clear', name)
+- added: ErrorBuilder.replace(search, value)
 
 - updated: controller.proxy() - added timeout
 
